# dunai-gi-gtk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gi-gtk-br-test.cabal
app/: Main.hs
app/FRP/: Dynamic.hs
app/FRP/Gtk/: Base.hs  Containers.hs  Widgets.hs
